# HandShake

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Application/Ports/: NoteRepository.h
src/Core/Model/: Note.h
src/Core/Storage/: FileNoteRepository.cpp  FileNoteRepository.h  NoteRepository.h
src/Domain/Model/: Note.h  NoteMetaData.h
src/InfraStructure/FileSystem/: FileNoteRepository.cpp  FileNoteRepository.h
src/InfraStructure/Formats/: FormatRegistry.cpp  FormatRegistry.h  NoteFormat.h  TxtFormat.cpp  TxtFormat.h
